--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Ms Wood's Site</title>
+    <title>Ms Jimena's Site</title>
     <meta name="description" content="Your Webpage Description">
-    <meta name="author" content="Joy Wood">
+    <meta name="author" content="Joy Jimena">
 
     <!-- Enable responsive viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,7 +32,7 @@
     <div class="navbar">
       <div class="navbar-inner">
         <div class="container-narrow">
-          <a class="brand" href="https://joywoodteaching.github.io/">Ms Wood's Site</a>
+          <a class="brand" href="https://joyJimenateaching.github.io/">Ms Wood's Site</a>
         </div>
       </div>
     </div>
@@ -43,7 +43,7 @@
         
 
 <div class="page-header">
-  <font color="orange"> <h2>Ms Wood's Site</font></h2>
+  <font color="orange"> <h2>Ms Jimena's Site</font></h2>
 </div>
 
 <div class="row-fluid">
