--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <p> Welcome to my webpage. My name is Joy Wood and I'm a Computer Science teacher at  <a class="brand" href="https://www.dsstpublicschools.org/college-view-high-school">DSST College View High School</a>.</p>
     <p> See me if you want to talk about rock climbing, Game of Thrones season 8, Will Smith, or just general life stuff. </p>
       <img src="0710-tyler-main-810x610.jpg">
+    <img src="earl.webp">
 <div class="page-header">
   <font color="orange"> <h2>My Projects  </font></h2>
 </div>
