--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <title>Ms Jimena's Site</title>
     <meta name="description" content="Your Webpage Description">
-    <meta name="author" content="Joy Jimena">
+    <meta name="author" content="Jimena Flores">
 
     <!-- Enable responsive viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -48,8 +48,8 @@
 
 <div class="row-fluid">
   <div class="span12">
-    <p> Welcome to my webpage. My name is Joy Wood and I'm a Computer Science teacher at  <a class="brand" href="https://www.dsstpublicschools.org/college-view-high-school">DSST College View High School</a>.</p>
-    <p> See me if you want to talk about rock climbing, Game of Thrones season 8, Will Smith, or just general life stuff. </p>
+    <p> Welcome to my webpage. My name is Jimena Flores and I'm a student at  <a class="brand" href="https://www.dsstpublicschools.org/college-view-high-school">DSST College View High School</a>.</p>
+    <p> I like to play sports, i like music my facorite is Tyler the Creator and im a BOT at Fortnite. </p>
       <img src="0710-tyler-main-810x610.jpg">
     <img src="earl.webp">
 <div class="page-header">
