--- a/index.html
+++ b/index.html
@@ -59,10 +59,8 @@
 <p>Here are a few projects that I am proud of.</p>
 
 <ul>
-    <li><a href="http://www.steamgirlsvt.com/the-team.html">Steam Girls</a></li>
-    <li><a href="silkscreenprints.html">Silk Screen Prints</a></li>
-  <li><a href="processingproject.html">Processing Project</a></li>
-    <li><a href="myfavoritestudent.html">Click to see who my favorite student is</a></li>
+  
+    <li><a href="OddFuture.html">OddFuture</a></li>
 
 </ul>
 
